styles/main.scss
// @import "../node_modules/normalize.css/normalize.css";
@import './BootstrapCustomVariables.scss';
@import '../node_modules/bootstrap/scss/bootstrap';
@import './BootstrapCustomStyling.scss';
@import '../node_modules/@fortawesome/fontawesome-svg-core/styles.css';
// @import url('https://fonts.googleapis.com/css2?family=Open+Sans&family=Recursive:wght@600&display=swap');

$page-color: #fafafa;
$black-color: #272727;

@font-face {
  font-family: 'Recursive';
  src: url('../public/Recursive-SemiBold-CASL=0-CRSV=0-MONO=0-slnt=0.ttf')
    format('truetype');
}

@font-face {
  font-family: 'Open Sans';
  src: url('../public/OpenSans-Regular.ttf') format('truetype');
}

body {
  font-family: 'Open Sans', 'SF Pro Icons', 'Helvetica', 'Arial', sans-serif;
  font-size: larger;
  // padding: 20px 20px 60px;
  // max-width: 680px;
  // margin: 0 auto;
}

h1,
h2 {
  font-family: 'Recursive', 'Noto serif', 'SF Pro Icons', 'Helvetica', 'Arial',
    sans-serif;
}

a {
  text-decoration: none;
  color: $primary;
  text-decoration-thickness: 0.1em;
}

hr {
  background-color: $primary;
  height: 0.05em;
  border-radius: 1em;
}

.content {
  max-width: 50em;
  margin: 0 auto;
  padding: 0.5em;
}

//   p{
//     line-height: 1.2em;

//   }

//  nav{
//   ul {
//     list-style-type: none;
//     margin: 0;
//     padding: 0;
//     overflow: hidden;
//   }
//  }

//   .navbar-brand:hover{
//     background-color: $primary-color;
//     border-radius: 5em;
//     color: white;
//   }

.navbar-brand-image {
  width: 4em;
}

.navbar-brand-text {
  font-family: 'Recursive', 'Noto serif', 'SF Pro Icons', 'Helvetica', 'Arial',
    sans-serif;
  vertical-align: middle;
  font-size: 1.5em;
  padding-left: 0.25em;
  margin-bottom: 1em;
}

//   .navbar-items{
//     float: right;
//   }

//   .navbar-item {
//     display: block;
//     text-align: center;
//     text-decoration: none;
//   }

/* Change the link color to #111 (black) on hover */
// li a:hover {
//   background-color: $primary-color;
//   border-radius: 1em;
//   color: white;

// }

header {
  display: flex;
  justify-content: flex-end;
  align-items: center;
  flex-wrap: wrap;
  vertical-align: middle;
}

.navbar-items {
  margin-bottom: 0px;
  list-style: none;

  vertical-align: middle;
  li {
    display: inline-block;
    border-radius: 3em;
    margin-right: 1em;
    a {
      padding: 0px 20px;
      transition: all 0.3s ease 0s;
    }
  }

  li:hover {
    background-color: $primary;
    a {
      color: white;
      text-decoration: none;
    }
  }

  .navbar-item-active {
    background-color: $primary;
    a {
      color: white;
      text-decoration: none;
    }
  }
}

.navbar-brand {
  cursor: pointer;
  margin-right: auto;
  padding-right: 1em;
  padding-top: 0px;
  padding-bottom: 0px;
  transition: all 0.3s ease 0s;
  border-radius: 3em;
}

.navbar-brand:hover {
  background-color: $primary;

  color: white;
}

nav {
  order: 1;
  vertical-align: middle;
}

article {
  padding-top: 1em;
  padding-bottom: 1em;
}

.project-entry-logo {
  max-width: 2em;
}

.project-entry-thumbnail-image {
  object-fit: contain;
  width: 100%;
  height: 15em;
}

.project-entry-thumbnail-gif {
  width: 100%;
}

.project-entry-screenshot {
  width: 100%;
}
.project-entry-anchor:hover {
  text-decoration: none;
}
.project-entry {
  color: black;
  margin-top: 1em;
  margin-bottom: 1em;
  background-color: darken($color: $page-color, $amount: 4);
  border-radius: 2em;
  transition: all 0.3s ease 0s;
  font-size: medium;
  padding: 1.5em;
  .project-entry-text {
    padding-top: 1.5em;
  }
  img {
    transition: all 0.3s ease 0s;
  }
}

.project-entry:hover {
  background-color: darken($color: $page-color, $amount: 10);
  img {
    filter: brightness(95%);
  }
  .project-entry-thumbnail-image-first {
    opacity: 0;
  }
  .project-entry-thumbnail-image-second {
    opacity: 1;
  }
}

.project-entry-modal {
  padding: 0;
  border: none;
  font-size: 0.75em;
  ul {
    margin-left: 0em;
  }

  .row {
    margin: 0;
  }
}
.project-entry-thumbnail-carousel-panel-modal {
  background-color: #1e1e24;
  padding: 0;
}

.project-entry-thumbnail-carousel-panel-no-modal {
  background-color: #1e1e24;
  padding: 0;
}

.project-entry-thumbnail-text-panel-modal {
  padding: 0;
}

.project-entry-description {
  margin-top: 1em;
}

.thumbnail-carousel-nav {
  padding: 0.5em;
  .btn {
    border-radius: 0;
    border: none;
    font-size: x-large;
    height: 3em;
  }
  button:focus {
    outline: none;
  }
}

.thumbnail-carousel-nav-item {
  background-color: #1e1e24;
  border: none;
  padding: 0;
  img {
    object-fit: contain;
    width: 5em;
    height: 5em;
    filter: brightness(70%);
  }
}

.thumbnail-carousel-nav-item-active {
  img {
    filter: brightness(100%);
    outline: 0.3em solid $primary;
    outline-offset: -0.3em;
  }
}

.article-nav-container {
  min-height: 80vh;
}

footer {
  background-color: $primary;
  color: white;
  box-shadow: 0 100vh 0 100vh $primary;
  ul {
    display: flex;
    justify-content: center;
    list-style: none;
    padding-left: 0px;
    li {
      margin: 1em;
      a {
        color: white;
      }
    }
  }
  text-align: center;
}

// TAGS

div.ReactTags__tags {
  position: relative;
}

/* Styles for the input */
div.ReactTags__tagInput {
  width: 200px;
  border-radius: 2px;
  display: inline-block;
}
div.ReactTags__tagInput input.ReactTags__tagInputField,
div.ReactTags__tagInput input.ReactTags__tagInputField:focus {
  height: 31px;
  margin: 0;
  width: 100%;
  border: 1px solid #eee;
  padding: 0 4px;
}

/* Styles for selected tags */
div.ReactTags__selected span.ReactTags__tag {
  border: 1px solid #ddd;
  background: #eee;
  display: inline-block;
  padding: 5px;
  margin: 0 5px;
  cursor: move;
  border-radius: 2px;
}
div.ReactTags__selected a.ReactTags__remove {
  color: #aaa;
  margin-left: 5px;
  cursor: pointer;
}

/* Styles for suggestions */
div.ReactTags__suggestions {
  position: absolute;
}
div.ReactTags__suggestions ul {
  list-style-type: none;
  box-shadow: 0.05em 0.01em 0.5em rgba(0, 0, 0, 0.2);
  background: white;
  width: 200px;
}
div.ReactTags__suggestions li {
  border-bottom: 1px solid #ddd;
  padding: 5px 10px;
  margin: 0;
}
div.ReactTags__suggestions li mark {
  text-decoration: underline;
  background: none;
  font-weight: 600;
}
div.ReactTags__suggestions ul li.ReactTags__activeSuggestion {
  background: #b7cfe0;
  cursor: pointer;
}

